--- a/binding1/src/app/cockpit/cockpit.component.html
+++ b/binding1/src/app/cockpit/cockpit.component.html
@@ -8,9 +8,9 @@
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server1</button>
+        (click)="onAddServer()">Add Server</button>
       <button
         class="btn btn-primary"
-        (click)="onAddBlueprint()">Add Server Blueprint1</button>
+        (click)="onAddBlueprint()">Add Server Blueprint</button>
     </div>
   </div>
