--- a/binding1/src/app/app.component.html
+++ b/binding1/src/app/app.component.html
@@ -1,15 +1,21 @@
 <div class="container">
-  <app-cockpit 
+  <app-cockpit
   (serverCreated)="onServerAdded($event)"
   (bpCreated)="onBlueprintAdded($event)"
   ></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element 
+      <app-server-element
       *ngFor="let serverElement of serverElements"
       [srvElement]="serverElement"
-      ></app-server-element>
+      >
+        <p>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+          <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+        </p>
+
+      </app-server-element>
     </div>
   </div>
 </div>
