--- a/recipe1/src/app/header/header.component.html
+++ b/recipe1/src/app/header/header.component.html
@@ -9,8 +9,8 @@
         <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
         <!-- <div class="collapse navbar-collapse"> -->
             <ul class="nav navbar-nav">
-                <li><a href="#">Receipes1</a></li>
-                <li><a href="#">Shopping List1</a></li>
+                <li><a href="#" (click)="onSelect('recipe')" >Receipes1</a></li>
+                <li><a href="#" (click)="onSelect('shopping-list')">Shopping List1</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
