--- a/recipe1/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe1/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,13 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img src="{{abc.imagePath}}" alt="{{abc.imagePath}}" class="img-responsive"
+        style="max-height: 300px;">
+        <!-- <img [src]="abc.imagePath" alt="" class="img-responsive"> -->
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1>{{abc.name}}</h1>
     </div>
 </div>
 <div class="row">
@@ -23,7 +25,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Description
+       {{abc.description}}
     </div>
 </div>
 <div class="row">
