--- a/recipe1/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe1/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,24 +6,11 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <a href="#" 
-        class="list-group-item clearfix" 
-        *ngFor="let rec of recipes">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{rec.name}}</h4>
-                <p class="list-group-item-text">{{rec.description}}</p>
-
-            </div>
-            <span class="pull-right">
-                <img 
-                
-                [src]="rec.imagePath"
-                alt="{{rec.name}}" 
-                class="img-responsive" 
-                style="max-height: 50px;">
-            </span>
-        </a>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item 
+        *ngFor="let rec of recipes"
+        [rec] = "rec"
+        (click)="recipeItemClicked(rec)"
+        ></app-recipe-item>
     </div>
 </div>
 
