--- a/recipe1/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe1/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,9 +7,8 @@
 <div class="row">
     <div class="col-xs-12">
         <app-recipe-item 
-        *ngFor="let rec of recipes"
-        [rec] = "rec"
-        (click)="recipeItemClicked(rec)"
+        *ngFor="let myrecipe of recipes"
+        [recipe] = "myrecipe"
         ></app-recipe-item>
     </div>
 </div>
