--- a/recipe1/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe1/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="{{abc.imagePath}}" alt="{{abc.imagePath}}" class="img-responsive"
+        <img src="{{recipe.imagePath}}" alt="{{recipe.imagePath}}" class="img-responsive"
         style="max-height: 300px;">
-        <!-- <img [src]="abc.imagePath" alt="" class="img-responsive"> -->
+        <!-- <img [src]="recipe.imagePath" alt="" class="img-responsive"> -->
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>{{abc.name}}</h1>
+        <h1>{{recipe.name}}</h1>
     </div>
 </div>
 <div class="row">
@@ -16,7 +16,7 @@
             <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
         
             <ul class="dropdown-menu">
-                <li><a href="#">To shopping List</a></li>
+                <li><a style="cursor: pointer;" (click)="onAddToShoppingList()">To shopping List</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
@@ -25,11 +25,18 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-       {{abc.description}}
+       {{recipe.description}}
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingredients
+        <ul class="list-group">
+            <li 
+                class="list-group-item"
+                *ngFor="let ingredient of recipe.ingredients"
+            >
+            {{ingredient.name}} - {{ingredient.amount}}
+            </li>
+        </ul>
     </div>
 </div>
