--- a/recipe1/src/app/recipes/recipes.component.html
+++ b/recipe1/src/app/recipes/recipes.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-7">
         <app-recipe-detail 
         *ngIf="selectedRecipe; else infoText"
-        [abc]="selectedRecipe"
+        [recipe]="selectedRecipe"
         ></app-recipe-detail>
         <ng-template #infoText>
             <p>Please select a Recipe!</p>
