--- a/rest1/src/app/login/login.component.html
+++ b/rest1/src/app/login/login.component.html
@@ -1,19 +1,26 @@
-<br>
-<div class="row">
-  <table class="table table-striped stripe">
+<div class="table-responsive">
+  <table class="table table-striped table-sm">
     <thead>
     <tr>
       <th>No.</th>
       <th>Country</th>
       <th>Population</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
     </thead>
+    <tbody>
     <tbody>
     <tr *ngFor="let hero of countries">
       <td>{{hero.id}}</td>
       <td>{{hero.countryName}}</td>
       <td>{{hero.population}}</td>
+      <td><a href="#"><button type="button" class="btn btn-primary px-3">Edit</button></a></td>
+      <td><a href="#"><button type="button" class="btn btn-danger px-3">Delete</button></a></td>
     </tr>
+    </tbody>
+    <tbody>
+
     </tbody>
   </table>
 </div>
